@@ -23,7 +23,6 @@
 #include "portab.h"
 #include "compat.h"
 #include "obdefs.h"
-#include "taddr.h"
 #include "dos.h"
 #include "gembind.h"
 #include "deskapp.h"
