@@ -21,7 +21,6 @@
 #include "portab.h"
 #include "compat.h"
 #include "obdefs.h"
-#include "taddr.h"
 #include "dos.h"
 #include "infodef.h"
 #include "gembind.h"
